// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsTableData by default 1`] = `
<ActionPopover
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Edit",
        "to": "/snippets/edit/example-id",
      },
      Object {
        "Component": [Function],
        "content": "Duplicate",
        "to": Object {
          "pathname": "/snippets/create",
          "state": Object {
            "id": "example-id",
            "subaccountId": undefined,
          },
        },
      },
      Object {
        "content": "Delete",
        "onClick": [Function],
      },
    ]
  }
/>
`;

exports[`ActionsTableData with subaccount 1`] = `
<ActionPopover
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Edit",
        "to": "/snippets/edit/example-id?subaccount=999",
      },
      Object {
        "Component": [Function],
        "content": "Duplicate",
        "to": Object {
          "pathname": "/snippets/create",
          "state": Object {
            "id": "example-id",
            "subaccountId": 999,
          },
        },
      },
      Object {
        "content": "Delete",
        "onClick": [Function],
      },
    ]
  }
/>
`;
